src/parser/FusionTablesSqlParser.java
// Generated from FusionTablesSql.g4 by ANTLR 4.5
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FusionTablesSqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, K_ALTER=7, K_AND=8, K_OR=9, 
		K_AS=10, K_ASC=11, K_AVERAGE=12, K_BY=13, K_BETWEEN=14, K_CASE=15, K_CIRCLE=16, 
		K_COLUMN=17, K_CONTAINS=18, K_COUNT=19, K_CREATE=20, K_DELETE=21, K_DESC=22, 
		K_DOES=23, K_CONTAIN=24, K_DROP=25, K_ENDS=26, K_FROM=27, K_GROUP=28, 
		K_HAVING=29, K_IGNORING=30, K_IN=31, K_INSERT=32, K_INTO=33, K_JOIN=34, 
		K_LATLNG=35, K_LEFT=36, K_LIKE=37, K_LIMIT=38, K_MATCHES=39, K_MAXIMUM=40, 
		K_MINIMUM=41, K_NOT=42, K_EQUAL=43, K_OF=44, K_OFFSET=45, K_ON=46, K_ORDER=47, 
		K_OUTER=48, K_RECTANGLE=49, K_RENAME=50, K_ST_DISTANCE=51, K_SELECT=52, 
		K_ST_INTERSECTS=53, K_SUM=54, K_SET=55, K_STARTS=56, K_TABLE=57, K_TO=58, 
		K_UPDATE=59, K_VALUES=60, K_VIEW=61, K_WHERE=62, K_WITH=63, LT_EQ=64, 
		GT_EQ=65, GT=66, EQ=67, LT=68, NUMERIC_LITERAL=69, STRING_LITERAL=70, 
		STRING=71, QUOTED_STRING=72, SINGLELINE_COMMENT=73, MULTILINE_COMMENT=74, 
		WHITESPACE=75;
	public static final int
		RULE_fusionTablesSql = 0, RULE_sql_stmt = 1, RULE_table_name_in_ddl = 2, 
		RULE_alter_table_stmt = 3, RULE_create_view_stmt = 4, RULE_drop_table_stmt = 5, 
		RULE_insert_stmt = 6, RULE_update_stmt = 7, RULE_column_assignment = 8, 
		RULE_delete_stmt = 9, RULE_eq_comparison = 10, RULE_table_name_with_alias = 11, 
		RULE_select_stmt = 12, RULE_ordering_term = 13, RULE_join_clause = 14, 
		RULE_result_column = 15, RULE_qualified_column_name = 16, RULE_aggregate_exp = 17, 
		RULE_expr = 18, RULE_qualified_column_name_in_expression = 19, RULE_and_or_or = 20, 
		RULE_geometry = 21, RULE_circle = 22, RULE_rectangle = 23, RULE_coordinate = 24, 
		RULE_keyword = 25, RULE_operator = 26, RULE_literal = 27, RULE_error_message = 28, 
		RULE_identifier = 29, RULE_column_alias = 30, RULE_table_name = 31, RULE_column_name = 32, 
		RULE_new_table_name = 33, RULE_view_name = 34, RULE_table_alias = 35, 
		RULE_numeric_literal = 36, RULE_string_literal = 37;
	public static final String[] ruleNames = {
		"fusionTablesSql", "sql_stmt", "table_name_in_ddl", "alter_table_stmt", 
		"create_view_stmt", "drop_table_stmt", "insert_stmt", "update_stmt", "column_assignment", 
		"delete_stmt", "eq_comparison", "table_name_with_alias", "select_stmt", 
		"ordering_term", "join_clause", "result_column", "qualified_column_name", 
		"aggregate_exp", "expr", "qualified_column_name_in_expression", "and_or_or", 
		"geometry", "circle", "rectangle", "coordinate", "keyword", "operator", 
		"literal", "error_message", "identifier", "column_alias", "table_name", 
		"column_name", "new_table_name", "view_name", "table_alias", "numeric_literal", 
		"string_literal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'('", "','", "')'", "'*'", "'.'", null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "'<='", "'>='", "'>'", "'='", "'<'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, "K_ALTER", "K_AND", "K_OR", 
		"K_AS", "K_ASC", "K_AVERAGE", "K_BY", "K_BETWEEN", "K_CASE", "K_CIRCLE", 
		"K_COLUMN", "K_CONTAINS", "K_COUNT", "K_CREATE", "K_DELETE", "K_DESC", 
		"K_DOES", "K_CONTAIN", "K_DROP", "K_ENDS", "K_FROM", "K_GROUP", "K_HAVING", 
		"K_IGNORING", "K_IN", "K_INSERT", "K_INTO", "K_JOIN", "K_LATLNG", "K_LEFT", 
		"K_LIKE", "K_LIMIT", "K_MATCHES", "K_MAXIMUM", "K_MINIMUM", "K_NOT", "K_EQUAL", 
		"K_OF", "K_OFFSET", "K_ON", "K_ORDER", "K_OUTER", "K_RECTANGLE", "K_RENAME", 
		"K_ST_DISTANCE", "K_SELECT", "K_ST_INTERSECTS", "K_SUM", "K_SET", "K_STARTS", 
		"K_TABLE", "K_TO", "K_UPDATE", "K_VALUES", "K_VIEW", "K_WHERE", "K_WITH", 
		"LT_EQ", "GT_EQ", "GT", "EQ", "LT", "NUMERIC_LITERAL", "STRING_LITERAL", 
		"STRING", "QUOTED_STRING", "SINGLELINE_COMMENT", "MULTILINE_COMMENT", 
		"WHITESPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FusionTablesSql.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FusionTablesSqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FusionTablesSqlContext extends ParserRuleContext {
		public List<Sql_stmtContext> sql_stmt() {
			return getRuleContexts(Sql_stmtContext.class);
		}
		public Sql_stmtContext sql_stmt(int i) {
			return getRuleContext(Sql_stmtContext.class,i);
		}
		public FusionTablesSqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fusionTablesSql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).enterFusionTablesSql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).exitFusionTablesSql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FusionTablesSqlVisitor ) return ((FusionTablesSqlVisitor<? extends T>)visitor).visitFusionTablesSql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FusionTablesSqlContext fusionTablesSql() throws RecognitionException {
		FusionTablesSqlContext _localctx = new FusionTablesSqlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_fusionTablesSql);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << K_ALTER) | (1L << K_CREATE) | (1L << K_DELETE) | (1L << K_DROP) | (1L << K_INSERT) | (1L << K_SELECT) | (1L << K_UPDATE))) != 0)) {
				{
				{
				setState(76);
				sql_stmt();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_stmtContext extends ParserRuleContext {
		public Alter_table_stmtContext alter_table_stmt() {
			return getRuleContext(Alter_table_stmtContext.class,0);
		}
		public Select_stmtContext select_stmt() {
			return getRuleContext(Select_stmtContext.class,0);
		}
		public Create_view_stmtContext create_view_stmt() {
			return getRuleContext(Create_view_stmtContext.class,0);
		}
		public Delete_stmtContext delete_stmt() {
			return getRuleContext(Delete_stmtContext.class,0);
		}
		public Drop_table_stmtContext drop_table_stmt() {
			return getRuleContext(Drop_table_stmtContext.class,0);
		}
		public Insert_stmtContext insert_stmt() {
			return getRuleContext(Insert_stmtContext.class,0);
		}
		public Update_stmtContext update_stmt() {
			return getRuleContext(Update_stmtContext.class,0);
		}
		public Sql_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).enterSql_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).exitSql_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FusionTablesSqlVisitor ) return ((FusionTablesSqlVisitor<? extends T>)visitor).visitSql_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sql_stmtContext sql_stmt() throws RecognitionException {
		Sql_stmtContext _localctx = new Sql_stmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sql_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			switch (_input.LA(1)) {
			case K_ALTER:
				{
				setState(82);
				alter_table_stmt();
				}
				break;
			case K_SELECT:
				{
				setState(83);
				select_stmt();
				}
				break;
			case K_CREATE:
				{
				setState(84);
				create_view_stmt();
				}
				break;
			case K_DELETE:
				{
				setState(85);
				delete_stmt();
				}
				break;
			case K_DROP:
				{
				setState(86);
				drop_table_stmt();
				}
				break;
			case K_INSERT:
				{
				setState(87);
				insert_stmt();
				}
				break;
			case K_UPDATE:
				{
				setState(88);
				update_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(91);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Table_name_in_ddlContext extends ParserRuleContext {
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public Table_name_in_ddlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_name_in_ddl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).enterTable_name_in_ddl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).exitTable_name_in_ddl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FusionTablesSqlVisitor ) return ((FusionTablesSqlVisitor<? extends T>)visitor).visitTable_name_in_ddl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Table_name_in_ddlContext table_name_in_ddl() throws RecognitionException {
		Table_name_in_ddlContext _localctx = new Table_name_in_ddlContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_table_name_in_ddl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			table_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Alter_table_stmtContext extends ParserRuleContext {
		public TerminalNode K_ALTER() { return getToken(FusionTablesSqlParser.K_ALTER, 0); }
		public TerminalNode K_TABLE() { return getToken(FusionTablesSqlParser.K_TABLE, 0); }
		public List<Table_name_in_ddlContext> table_name_in_ddl() {
			return getRuleContexts(Table_name_in_ddlContext.class);
		}
		public Table_name_in_ddlContext table_name_in_ddl(int i) {
			return getRuleContext(Table_name_in_ddlContext.class,i);
		}
		public TerminalNode K_RENAME() { return getToken(FusionTablesSqlParser.K_RENAME, 0); }
		public TerminalNode K_TO() { return getToken(FusionTablesSqlParser.K_TO, 0); }
		public Alter_table_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alter_table_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).enterAlter_table_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).exitAlter_table_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FusionTablesSqlVisitor ) return ((FusionTablesSqlVisitor<? extends T>)visitor).visitAlter_table_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Alter_table_stmtContext alter_table_stmt() throws RecognitionException {
		Alter_table_stmtContext _localctx = new Alter_table_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_alter_table_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(K_ALTER);
			setState(96);
			match(K_TABLE);
			setState(97);
			table_name_in_ddl();
			{
			setState(98);
			match(K_RENAME);
			setState(99);
			match(K_TO);
			setState(100);
			table_name_in_ddl();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_view_stmtContext extends ParserRuleContext {
		public TerminalNode K_CREATE() { return getToken(FusionTablesSqlParser.K_CREATE, 0); }
		public TerminalNode K_VIEW() { return getToken(FusionTablesSqlParser.K_VIEW, 0); }
		public View_nameContext view_name() {
			return getRuleContext(View_nameContext.class,0);
		}
		public TerminalNode K_AS() { return getToken(FusionTablesSqlParser.K_AS, 0); }
		public TerminalNode K_SELECT() { return getToken(FusionTablesSqlParser.K_SELECT, 0); }
		public List<Result_columnContext> result_column() {
			return getRuleContexts(Result_columnContext.class);
		}
		public Result_columnContext result_column(int i) {
			return getRuleContext(Result_columnContext.class,i);
		}
		public TerminalNode K_FROM() { return getToken(FusionTablesSqlParser.K_FROM, 0); }
		public Table_name_with_aliasContext table_name_with_alias() {
			return getRuleContext(Table_name_with_aliasContext.class,0);
		}
		public List<Join_clauseContext> join_clause() {
			return getRuleContexts(Join_clauseContext.class);
		}
		public Join_clauseContext join_clause(int i) {
			return getRuleContext(Join_clauseContext.class,i);
		}
		public TerminalNode K_WHERE() { return getToken(FusionTablesSqlParser.K_WHERE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Create_view_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_view_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).enterCreate_view_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).exitCreate_view_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FusionTablesSqlVisitor ) return ((FusionTablesSqlVisitor<? extends T>)visitor).visitCreate_view_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_view_stmtContext create_view_stmt() throws RecognitionException {
		Create_view_stmtContext _localctx = new Create_view_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_create_view_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(K_CREATE);
			setState(103);
			match(K_VIEW);
			setState(104);
			view_name();
			setState(105);
			match(K_AS);
			setState(106);
			match(T__1);
			setState(107);
			match(K_SELECT);
			setState(108);
			result_column();
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(109);
				match(T__2);
				setState(110);
				result_column();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			match(K_FROM);
			{
			{
			setState(117);
			table_name_with_alias();
			setState(120);
			_la = _input.LA(1);
			if (_la==K_WHERE) {
				{
				setState(118);
				match(K_WHERE);
				setState(119);
				expr();
				}
			}

			}
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==K_LEFT) {
				{
				{
				setState(122);
				join_clause();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(128);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Drop_table_stmtContext extends ParserRuleContext {
		public TerminalNode K_DROP() { return getToken(FusionTablesSqlParser.K_DROP, 0); }
		public TerminalNode K_TABLE() { return getToken(FusionTablesSqlParser.K_TABLE, 0); }
		public Table_name_in_ddlContext table_name_in_ddl() {
			return getRuleContext(Table_name_in_ddlContext.class,0);
		}
		public Drop_table_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drop_table_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).enterDrop_table_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).exitDrop_table_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FusionTablesSqlVisitor ) return ((FusionTablesSqlVisitor<? extends T>)visitor).visitDrop_table_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Drop_table_stmtContext drop_table_stmt() throws RecognitionException {
		Drop_table_stmtContext _localctx = new Drop_table_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_drop_table_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(K_DROP);
			setState(131);
			match(K_TABLE);
			setState(132);
			table_name_in_ddl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Insert_stmtContext extends ParserRuleContext {
		public TerminalNode K_INSERT() { return getToken(FusionTablesSqlParser.K_INSERT, 0); }
		public TerminalNode K_INTO() { return getToken(FusionTablesSqlParser.K_INTO, 0); }
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public List<Column_nameContext> column_name() {
			return getRuleContexts(Column_nameContext.class);
		}
		public Column_nameContext column_name(int i) {
			return getRuleContext(Column_nameContext.class,i);
		}
		public TerminalNode K_VALUES() { return getToken(FusionTablesSqlParser.K_VALUES, 0); }
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public Insert_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insert_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).enterInsert_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FusionTablesSqlListener ) ((FusionTablesSqlListener)listener).exitInsert_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FusionTablesSqlVisitor ) return ((FusionTablesSqlVisitor<? extends T>)visitor).visitInsert_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Insert_stmtContext insert_stmt() throws RecognitionException {
		Insert_stmtContext _localctx = new Insert_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_insert_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(K_INSERT);
			setState(135);
			match(K_INTO);
			setState(136);
			table_name();
			{
			setState(137);
			match(T__1);
			setState(138);
			column_name();
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(139);
				match(T__2);
				setState(140);
				column_name();
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146);
			match(T__3);
			}
			{
			setState(148);
			match(K_VALUES);
			setState(149);
			match(T__1);
			setState(150);
			literal();
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(151);
				match(T__2);
				setState(152);
				literal();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158);
			match(T__3);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
